fixed login issue

--- a/polls/templates/polls/poll_detail.html
+++ b/polls/templates/polls/poll_detail.html
@@ -277,7 +277,7 @@
                     <div class="radio-btn">
                         <div class="content">
                             <div class="profile-img">
-                                <img src="{% static 'anshula.jpg' %}" alt="" />
+                                <img src="{% static 'anshula.JPG' %}" alt="" />
                             </div>
                             <input type="radio" name="choice" id="choice{{ forloop.counter }}"
                                 value="{{ choice_id.4 }}">
